Fix word wrap and broken file upload button from 2.1 in 2.2, too [#34834339, 34834843 and 34835089]

--- a/app/assets/stylesheets/base/_truncated_text.scss
+++ b/app/assets/stylesheets/base/_truncated_text.scss
@@ -6,6 +6,7 @@
         &.extra_line {
             height: $summary-line-height * 3;
         }
+        word-wrap: break-word;
         overflow: hidden;
 
         .original {
